added html signup/login templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,10 +19,11 @@
                     <div class="cm-menu-inner">
                         <ul class="menu-ul clear-all">
                             <li class="has-child">
-                                <p class='text-wrapper-2 header-button'>Login</p>
-                            </li>
-                            <li class="has-child">
-                                <p class='text-wrapper-2 header-button'>Signup</p>
+                                <li class="has-child">
+                                    <a href="{{ url_for('login') }}" class='text-wrapper-2 header-button'>Login</a>
+                                </li>
+                                <li class="has-child">
+                                    <a href="{{ url_for('signup') }}" class='text-wrapper-2 header-button'>Signup</a>
                             </li>
                         </ul>
                     </div>
