--- a/templates/login.html
+++ b/templates/login.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login</title>
-<link rel="stylesheet" href="./Assets/CSS/logsign.css">
-</head>
-<body>
-
-<div class="container">
-  <h1>Login</h1>
-  <form action="#" method="POST">
-    <input type="email" placeholder="Email" required>
-    <input type="password" placeholder="Password" required>
-    <select>
-      <option value="delivery_agent">Delivery Agent</option>
-      <option value="user">User</option>
-      <option value="restaurant">Restaurant</option>
-    </select>
-    <button type="submit">Login</button>
-  </form>
-</div>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="./Assets/CSS/logsign.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Login</h1>
+      <form action="#" method="POST">
+        <input type="email" name="useremail" placeholder="Email" required />
+        <input
+          type="password"
+          name="password"
+          placeholder="Password"
+          required
+        />
+        <select name="authority">
+          <option value="Delivery Agent">Delivery Agent</option>
+          <option value="Customer">User</option>
+          <option value="Restaurant">Restaurant</option>
+        </select>
+        <button type="submit">Login</button>
+      </form>
+    </div>
+  </body>
 </html>
