--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
         />
         <select name="authority">
           <option value="Delivery Agent">Delivery Agent</option>
-          <option value="Customer">User</option>
+          <option value="Customer">Customer</option>
           <option value="Restaurant">Restaurant</option>
         </select>
         <button type="submit">Login</button>
