--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sign Up</title>
-<link rel="stylesheet" href="./Assets/CSS/logsign.css">
+<link rel="stylesheet" href="../static/CSS/signup.css">
 </head>
 <body>
 
