--- a/templates/delivery/signup_deli.html
+++ b/templates/delivery/signup_deli.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delivery Agent Signup</title>
-    <link rel="stylesheet" href="../static/Assets/CSS/signup.css" />
+    <link rel="stylesheet" href="../static/CSS/signup.css" />
   </head>
   <body>
     <div class="container">
