--- a/templates/customers/menu.html
+++ b/templates/customers/menu.html
@@ -20,6 +20,8 @@
   </head>
   <body>
     <div class="container my-5">
+      <button onclick="goBack()" class="btn btn-secondary mb-3">Back</button>
+
       {% for item in restaurant_name %}
       <h1 class="text-center mb-4">{{ item.restaurant_name }}</h1>
       {% endfor %}
@@ -74,6 +76,10 @@
     </div>
 
     <script>
+      function goBack() {
+        window.history.back();
+      }
+
       let itemCounts = {};
 
       function increaseCount(itemId) {
