--- a/templates/customers/restaurants.html
+++ b/templates/customers/restaurants.html
@@ -28,6 +28,8 @@
 <body>
   <div class="container my-5">
     <h1 class="text-center mb-4">Restaurants</h1>
+    <a href="http://127.0.0.1:5000/dashboard" class="btn btn-secondary mb-3">Back</a>
+
     <div class="row">
       {% for restaurant in restaurants %}
         <div class="col-sm-6 col-md-4 col-lg-3">
