--- a/templates/customers/userdetails.html
+++ b/templates/customers/userdetails.html
@@ -7,6 +7,8 @@
 <body>
     <h1>User Details</h1>
     <h2>Account Details</h2>
+    <a href="http://127.0.0.1:5000/dashboard" class="btn-back">Back</a>
+
     <table>
         <tr>
             <th>Customer ID</th>
