--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,9 @@
                         <ul class="menu-ul clear-all">
                             <li class="has-child">
                                 <li class="has-child">
+                                    <a href="{{ url_for('aboutus') }}" class='text-wrapper-2 header-button'>About Us</a>
+                                </li>
+                                <li class="has-child">
                                     <a href="{{ url_for('login') }}" class='text-wrapper-2 header-button'>Login</a>
                                 </li>
                                 <li class="has-child">
