Changes in styling and some changes in app.py

--- a/templates/customers/restaurants.html
+++ b/templates/customers/restaurants.html
@@ -35,7 +35,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3">
           <a href="{{ url_for('restaurant_menu', restaurant_id=restaurant.restaurant_id, cuisine_type=restaurant.cuisine_type) }}" class="text-decoration-none">
             <div class="restaurant-card">
-              <img src="taj-mahal-restaurant.jpg" alt="Taj Mahal Restaurant" class="img-thumbnail">
+              <img src="taj-mahal-restaurant.jpg" alt="{{ restaurant.restaurant_name }}" class="img-thumbnail">
               <h5 class="card-title">{{ restaurant.restaurant_name }}</h5>
               <p class="card-text">Cuisine: {{ restaurant.cuisine_type }}</p>
               <p class="card-text">{{ restaurant.description }}</p>
