--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
             <p class="Home-para">Check the website and get our ice cream, snacks,<br>
                 drinks, pastries van in 10 minutes.</p>
             <img src="./static/Assets/Images/food-delivery-rider.png" class="Home-text-img"></img>
-            <button class="home-get-started">Get Started</button>    
+            <a href="{{ url_for('signup') }}"><button class="home-get-started">Get Started</button></a> 
         </div>
         <div class="Home-image-div">
             <img src="./static/Assets/Images/food-delivery-rider.png" class="home-image"></img>
