--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,7 @@
           <option value="Restaurant">Restaurant</option>
         </select>
         <button type="submit">Login</button>
+        <p>Don't have an account <a href="{{ url_for('signup') }}">sign up</a></p>
       </form>
     </div>
   </body>
