--- a/templates/restaurants/details.html
+++ b/templates/restaurants/details.html
@@ -68,7 +68,7 @@
       </table>
       <h2>Menu</h2>
       <div class="container my-5">
-    
+        <a href="{{ url_for('add_item') }}" type="button" class="btn btn-primary">Add Item</a>
         <div class="row">
           {% for food in menu %}
           <div class="col-md-6 col-lg-4">
@@ -88,11 +88,13 @@
               <a href="{{ url_for('edit_menu', item_id=food.item_id) }}">
                 <button type="button" class="btn btn-primary">Edit Menu</button>
               </a>
+              <a href="{{ url_for('delete_item', item_id=food.item_id) }}">
+                <button type="button" class="btn btn-danger">Delete</button>
+              </a>
             </div>
           </div>
           {% endfor %}
         </div>
-  
       </div>
     </div>
 </body>
