Some style changes

--- a/templates/restaurants/details.html
+++ b/templates/restaurants/details.html
@@ -69,8 +69,8 @@
           {% endfor %}
         </tbody>
       </table>
-      <h2>Menu</h2>
-      <div class="container my-5">
+      <h2 style="margin-top: 30px;">Menu</h2>
+      <div style="margin-top: 20px !important;" class="my-5">
         <div class="row">
           {% for food in menu %}
           <div class="col-md-6 col-lg-4">
